--- a/css/slider.css
+++ b/css/slider.css
@@ -8,7 +8,7 @@
 #slider .slider-controls .circle:hover { opacity: 1; }
 #slider .slider-controls .circle.slider-control.left{ left: 0; margin-left: 10px; }
 #slider .slider-controls .circle.slider-control.right { right: 0; margin-right: 10px;  }
-#slider .slider-controls .arrow { width: 18px; height: 22px; background-image: url("images/arrows.png"); }
+#slider .slider-controls .slider-control .arrow { margin: 12px 0 0 12px; width: 17px !important; }
 #slider .slider-controls .slider-control.left .arrow { margin: 12px 0 0 12px; }
 #slider .slider-controls .slider-control.right .arrow { margin: 12px 0 0 15px; background-position: -17px 0; }
 
