Changed current edition to BARS15, improved movie post type plugin & added Illusion Dreams FX and removed Carrie/Sony in sponsors.

--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -2,69 +2,67 @@
 .auspiciante { margin: 20px 35px 0 35px; width:140px; height:80px; display:inline-block; overflow:hidden; background-repeat: no-repeat; background:url("images/auspiciantes.png");}
 .auspiciante a { display: block; height: 100%; width: 100%; }
 
-/* Hover - Difference is 340px in height. */
-.auspiciante_ab                  { background-position: 0 340px;  }
-.auspiciante_bsasciudad          { background-position: -190px 340px;  }
-.auspiciante_campari             { background-position: -380px 340px;  }
-.auspiciante_cinefania           { background-position: -570px 340px;  }
-.auspiciante_cinesargentinos     { background-position: -760px 340px;  }
-.auspiciante_cunnington          { background-position: -950px 340px;  }
-.auspiciante_eda                 { background-position: -1140px 340px;  }
-.auspiciante_fantafestivales     { background-position: -1330px 340px;  }
-.auspiciante_festeringslime      { background-position: -1520px 340px;  }
-.auspiciante_filmoteca           { background-position: -1710px 340px;  }
-.auspiciante_findlingfilms       { background-position: -1900px 340px;  }
-.auspiciante_incaa               { background-position: 0 210px;  }
-.auspiciante_lacripta            { background-position: -190px 210px;  }
-.auspiciante_leotripi            { background-position: -380px 210px;  }
-.auspiciante_metamorfosisfx      { background-position: -570px 210px;  }
-.auspiciante_monumental          { background-position: -760px 210px;  }
-.auspiciante_mostaza             { background-position: -950px 210px;  }
-.auspiciante_nacionalrock        { background-position: -1140px 210px;  }
-.auspiciante_piromaniafx         { background-position: -1330px 210px;  }
-.auspiciante_planetarycomics     { background-position: -1520px 210px;  }
-.auspiciante_quintadimension     { background-position: -1710px 210px;  }
-.auspiciante_rafma               { background-position: -1900px 210px;  }
-.auspiciante_rarovhs             { background-position: 0 80px;  }
-.auspiciante_rentalbsas          { background-position: -190px 80px;  }
-.auspiciante_requiem             { background-position: -380px 80px;  }
-.auspiciante_sony                { background-position: -570px 80px;  }
-.auspiciante_syfy                { background-position: -760px 80px;  }
-.auspiciante_ticoral             { background-position: -950px 80px;  }
-.auspiciante_toronja             { background-position: -1140px 80px;  }
-.auspiciante_vacomoloco          { background-position: -1330px 80px;  }
-.auspiciante_flaviogrecopaglia   { background-position: -1520px 80px;  }
-.auspiciante_videoflims          { background-position: -1710px 80px;  }
-
-.auspiciante_ab:hover                  { background-position: 0 0;  }
-.auspiciante_bsasciudad:hover          { background-position: -190px 0;  }
-.auspiciante_campari:hover             { background-position: -380px 0;  }
-.auspiciante_cinefania:hover           { background-position: -570px 0;  }
-.auspiciante_cinesargentinos:hover     { background-position: -760px 0;  }
-.auspiciante_cunnington:hover          { background-position: -950px 0;  }
-.auspiciante_eda:hover                 { background-position: -1140px 0;  }
-.auspiciante_fantafestivales:hover     { background-position: -1330px 0;  }
-.auspiciante_festeringslime:hover      { background-position: -1520px 0;  }
-.auspiciante_filmoteca:hover           { background-position: -1710px 0;  }
-.auspiciante_findlingfilms:hover       { background-position: -1900px 0;  }
-.auspiciante_incaa:hover               { background-position: 0 -130px;  }
-.auspiciante_lacripta:hover            { background-position: -190px -130px;  }
-.auspiciante_leotripi:hover            { background-position: -380px -130px;  }
-.auspiciante_metamorfosisfx:hover      { background-position: -570px -130px;  }
-.auspiciante_monumental:hover          { background-position: -760px -130px;  }
-.auspiciante_mostaza:hover             { background-position: -950px -130px;  }
-.auspiciante_nacionalrock:hover        { background-position: -1140px -130px;  }
-.auspiciante_piromaniafx:hover         { background-position: -1330px -130px;  }
-.auspiciante_planetarycomics:hover     { background-position: -1520px -130px;  }
-.auspiciante_quintadimension:hover     { background-position: -1710px -130px;  }
-.auspiciante_rafma:hover               { background-position: -1900px -130px;  }
-.auspiciante_rarovhs:hover             { background-position: 0 -260px;  }
-.auspiciante_rentalbsas:hover          { background-position: -190px -260px;  }
-.auspiciante_requiem:hover             { background-position: -380px -260px;  }
-.auspiciante_sony:hover                { background-position: -570px -260px;  }
-.auspiciante_syfy:hover                { background-position: -760px -260px;  }
-.auspiciante_ticoral:hover             { background-position: -950px -260px;  }
-.auspiciante_toronja:hover             { background-position: -1140px -260px;  }
-.auspiciante_vacomoloco:hover          { background-position: -1330px -260px;  }
-.auspiciante_flaviogrecopaglia:hover   { background-position: -1520px -260px;  }
-.auspiciante_videoflims:hover          { background-position: -1710px -260px;  }
+.auspiciante_ab:hover               { background-position: 0 0; }
+.auspiciante_ab                     { background-position: 0 -81px; }
+.auspiciante_bsasciudad:hover       { background-position: 0 -162px; }
+.auspiciante_bsasciudad             { background-position: 0 -243px; }
+.auspiciante_campari:hover          { background-position: 0 -324px; }
+.auspiciante_campari                { background-position: 0 -405px; }
+.auspiciante_cinefania:hover        { background-position: 0 -486px; }
+.auspiciante_cinefania              { background-position: 0 -567px; }
+.auspiciante_cinesargentinos:hover  { background-position: 0 -648px; }
+.auspiciante_cinesargentinos        { background-position: 0 -729px; }
+.auspiciante_cunnington:hover       { background-position: 0 -810px; }
+.auspiciante_cunnington             { background-position: 0 -891px; }
+.auspiciante_eda:hover              { background-position: 0 -972px; }
+.auspiciante_eda                    { background-position: 0 -1053px; }
+.auspiciante_fantafestivales:hover  { background-position: 0 -1134px; }
+.auspiciante_fantafestivales        { background-position: 0 -1215px; }
+.auspiciante_festeringslime:hover   { background-position: 0 -1296px; }
+.auspiciante_festeringslime         { background-position: 0 -1377px; }
+.auspiciante_filmoteca:hover        { background-position: 0 -1458px; }
+.auspiciante_filmoteca              { background-position: 0 -1539px; }
+.auspiciante_findlingfilms:hover    { background-position: 0 -1620px; }
+.auspiciante_findlingfilms          { background-position: 0 -1701px; }
+.auspiciante_flaviogrecopaglia:hover{ background-position: 0 -1782px; }
+.auspiciante_flaviogrecopaglia      { background-position: 0 -1863px; }
+.auspiciante_illusiondreamsfx:hover { background-position: 0 -1944px; }
+.auspiciante_illusiondreamsfx       { background-position: -141px 0; }
+.auspiciante_incaa:hover            { background-position: -141px -81px; }
+.auspiciante_incaa                  { background-position: -141px -162px; }
+.auspiciante_lacripta:hover         { background-position: -141px -243px; }
+.auspiciante_lacripta               { background-position: -141px -324px; }
+.auspiciante_leotripi:hover         { background-position: -141px -405px; }
+.auspiciante_leotripi               { background-position: -141px -486px; }
+.auspiciante_metamorfosisfx:hover   { background-position: -141px -567px; }
+.auspiciante_metamorfosisfx         { background-position: -141px -648px; }
+.auspiciante_monumental:hover       { background-position: -141px -729px; }
+.auspiciante_monumental             { background-position: -141px -810px; }
+.auspiciante_mostaza:hover          { background-position: -141px -891px; }
+.auspiciante_mostaza                { background-position: -141px -972px; }
+.auspiciante_nacionalrock:hover     { background-position: -141px -1053px; }
+.auspiciante_nacionalrock           { background-position: -141px -1134px; }
+.auspiciante_piromaniafx:hover      { background-position: -141px -1215px; }
+.auspiciante_piromaniafx            { background-position: -141px -1296px; }
+.auspiciante_planetarycomics:hover  { background-position: -141px -1377px; }
+.auspiciante_planetarycomics        { background-position: -141px -1458px; }
+.auspiciante_quintadimension:hover  { background-position: -141px -1539px; }
+.auspiciante_quintadimension        { background-position: -141px -1620px; }
+.auspiciante_rafma:hover            { background-position: -141px -1701px; }
+.auspiciante_rafma                  { background-position: -141px -1782px; }
+.auspiciante_rarovhs:hover          { background-position: -141px -1863px; }
+.auspiciante_rarovhs                { background-position: -141px -1944px; }
+.auspiciante_rentalbsas:hover       { background-position: -282px 0; }
+.auspiciante_rentalbsas             { background-position: -282px -81px; }
+.auspiciante_requiem:hover          { background-position: -282px -162px; }
+.auspiciante_requiem                { background-position: -282px -243px; }
+.auspiciante_syfy:hover             { background-position: -282px -324px; }
+.auspiciante_syfy                   { background-position: -282px -405px; }
+.auspiciante_ticoral:hover          { background-position: -282px -486px; }
+.auspiciante_ticoral                { background-position: -282px -567px; }
+.auspiciante_toronja:hover          { background-position: -282px -648px; }
+.auspiciante_toronja                { background-position: -282px -729px; }
+.auspiciante_vacomoloco:hover       { background-position: -282px -810px; }
+.auspiciante_vacomoloco             { background-position: -282px -891px; }
+.auspiciante_videoflims:hover       { background-position: -282px -972px; }
+.auspiciante_videoflims             { background-position: -282px -1053px; }
