--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,10 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 #page-single.page { padding-top: 20px; }
 #page-call .page-header { padding-top: 30px; background: #110000; }
 #page-selection .page-header { padding-top: 30px; background: #110000; }
+#page-juries .page-header { padding-top: 30px; background: #110000; }
+#page-juries .page-header.juries { padding-top: 30px; background: none; }
+#page-juries .page-header.juries.section { padding: 15px 0 15px 30px; background: none; font-size: 1.4em; }
+#page-juries .page-header.juries.section .genericon { line-height: 2.2; margin: 0 5px; }
 
 .warning { padding: 20px 20px 50px 20px; }
 
@@ -96,6 +100,15 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 
 /* Festival (festival.php) */
 #page-festival .festival-history { padding: 10px 40px; }
+
+/* Juries */
+#page-juries .content { padding: 10px 40px; }
+#page-juries .awards { background: rgba(25,25,25,0.5); border-radius: 5px; padding: 10px; }
+#page-juries .awards tr th, #page-juries .awards tr td { text-align: center; width: 50%; }
+#page-juries .jury { clear: both; margin: 0 30px 15px 50px; padding: 10px 10px 5px 10px; border-top: 1px solid gray; background: rgba(25,25,25,0.5); border-radius: 5px; }
+#page-juries .jury .jury-image { float: left; width: 150px; height: 150px; border-radius: 5px; margin: 0 10px 10px 0; }
+#page-juries .jury .jury-info { padding-right: 10px; line-height: 1.5; }
+#page-juries .jury .jury-info .jury-name { margin-bottom: 10px; font-size: 1.1em; font-weight: bold; }
 
 /*
  (contact.php) */
