--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -2,67 +2,71 @@
 .auspiciante { margin: 20px 35px 0 35px; width:140px; height:80px; display:inline-block; overflow:hidden; background-repeat: no-repeat; background:url("images/auspiciantes.png");}
 .auspiciante a { display: block; height: 100%; width: 100%; }
 
-.auspiciante_ab:hover               { background-position: 0 0; }
-.auspiciante_ab                     { background-position: 0 -81px; }
-.auspiciante_bsasciudad:hover       { background-position: 0 -162px; }
-.auspiciante_bsasciudad             { background-position: 0 -243px; }
-.auspiciante_campari:hover          { background-position: 0 -324px; }
-.auspiciante_campari                { background-position: 0 -405px; }
-.auspiciante_cinefania:hover        { background-position: 0 -486px; }
-.auspiciante_cinefania              { background-position: 0 -567px; }
-.auspiciante_cinesargentinos:hover  { background-position: 0 -648px; }
-.auspiciante_cinesargentinos        { background-position: 0 -729px; }
-.auspiciante_cunnington:hover       { background-position: 0 -810px; }
-.auspiciante_cunnington             { background-position: 0 -891px; }
-.auspiciante_eda:hover              { background-position: 0 -972px; }
-.auspiciante_eda                    { background-position: 0 -1053px; }
-.auspiciante_fantafestivales:hover  { background-position: 0 -1134px; }
-.auspiciante_fantafestivales        { background-position: 0 -1215px; }
-.auspiciante_festeringslime:hover   { background-position: 0 -1296px; }
-.auspiciante_festeringslime         { background-position: 0 -1377px; }
-.auspiciante_filmoteca:hover        { background-position: 0 -1458px; }
-.auspiciante_filmoteca              { background-position: 0 -1539px; }
-.auspiciante_findlingfilms:hover    { background-position: 0 -1620px; }
-.auspiciante_findlingfilms          { background-position: 0 -1701px; }
-.auspiciante_flaviogrecopaglia:hover{ background-position: 0 -1782px; }
-.auspiciante_flaviogrecopaglia      { background-position: 0 -1863px; }
-.auspiciante_illusiondreamsfx:hover { background-position: 0 -1944px; }
-.auspiciante_illusiondreamsfx       { background-position: -141px 0; }
-.auspiciante_incaa:hover            { background-position: -141px -81px; }
-.auspiciante_incaa                  { background-position: -141px -162px; }
-.auspiciante_lacripta:hover         { background-position: -141px -243px; }
-.auspiciante_lacripta               { background-position: -141px -324px; }
-.auspiciante_leotripi:hover         { background-position: -141px -405px; }
-.auspiciante_leotripi               { background-position: -141px -486px; }
-.auspiciante_metamorfosisfx:hover   { background-position: -141px -567px; }
-.auspiciante_metamorfosisfx         { background-position: -141px -648px; }
-.auspiciante_monumental:hover       { background-position: -141px -729px; }
-.auspiciante_monumental             { background-position: -141px -810px; }
-.auspiciante_mostaza:hover          { background-position: -141px -891px; }
-.auspiciante_mostaza                { background-position: -141px -972px; }
-.auspiciante_nacionalrock:hover     { background-position: -141px -1053px; }
-.auspiciante_nacionalrock           { background-position: -141px -1134px; }
-.auspiciante_piromaniafx:hover      { background-position: -141px -1215px; }
-.auspiciante_piromaniafx            { background-position: -141px -1296px; }
-.auspiciante_planetarycomics:hover  { background-position: -141px -1377px; }
-.auspiciante_planetarycomics        { background-position: -141px -1458px; }
-.auspiciante_quintadimension:hover  { background-position: -141px -1539px; }
-.auspiciante_quintadimension        { background-position: -141px -1620px; }
-.auspiciante_rafma:hover            { background-position: -141px -1701px; }
-.auspiciante_rafma                  { background-position: -141px -1782px; }
-.auspiciante_rarovhs:hover          { background-position: -141px -1863px; }
-.auspiciante_rarovhs                { background-position: -141px -1944px; }
-.auspiciante_rentalbsas:hover       { background-position: -282px 0; }
-.auspiciante_rentalbsas             { background-position: -282px -81px; }
-.auspiciante_requiem:hover          { background-position: -282px -162px; }
-.auspiciante_requiem                { background-position: -282px -243px; }
-.auspiciante_syfy:hover             { background-position: -282px -324px; }
-.auspiciante_syfy                   { background-position: -282px -405px; }
-.auspiciante_ticoral:hover          { background-position: -282px -486px; }
-.auspiciante_ticoral                { background-position: -282px -567px; }
-.auspiciante_toronja:hover          { background-position: -282px -648px; }
-.auspiciante_toronja                { background-position: -282px -729px; }
-.auspiciante_vacomoloco:hover       { background-position: -282px -810px; }
-.auspiciante_vacomoloco             { background-position: -282px -891px; }
-.auspiciante_videoflims:hover       { background-position: -282px -972px; }
-.auspiciante_videoflims             { background-position: -282px -1053px; }
+.auspiciante_ab:hover                  { background-position: 0 0;  }
+.auspiciante_ab                        { background-position: -141px 0;  }
+.auspiciante_bsasciudad:hover          { background-position: -282px 0;  }
+.auspiciante_bsasciudad                { background-position: -423px 0;  }
+.auspiciante_cdi:hover                 { background-position: -564px 0;  }
+.auspiciante_cdi                       { background-position: -705px 0;  }
+.auspiciante_cinefania:hover           { background-position: -846px 0;  }
+.auspiciante_cinefania                 { background-position: -987px 0;  }
+.auspiciante_cinesargentinos:hover     { background-position: -1128px 0;  }
+.auspiciante_cinesargentinos           { background-position: -1269px 0;  }
+.auspiciante_cunnington:hover          { background-position: -1410px 0;  }
+.auspiciante_cunnington                { background-position: -1551px 0;  }
+.auspiciante_eda:hover                 { background-position: -1692px 0;  }
+.auspiciante_eda                       { background-position: -1833px 0;  }
+.auspiciante_fantafestivales:hover     { background-position: -1974px 0;  }
+.auspiciante_fantafestivales           { background-position: 0 -81px;  }
+.auspiciante_festeringslime:hover      { background-position: -141px -81px;  }
+.auspiciante_festeringslime            { background-position: -282px -81px;  }
+.auspiciante_findlingfilms:hover       { background-position: -423px -81px;  }
+.auspiciante_findlingfilms             { background-position: -564px -81px;  }
+.auspiciante_flaviogrecopaglia:hover   { background-position: -705px -81px;  }
+.auspiciante_flaviogrecopaglia         { background-position: -846px -81px;  }
+.auspiciante_grolsch:hover             { background-position: -987px -81px;  }
+.auspiciante_grolsch                   { background-position: -1128px -81px;  }
+.auspiciante_illusiondreamsfx:hover    { background-position: -1269px -81px;  }
+.auspiciante_illusiondreamsfx          { background-position: -1410px -81px;  }
+.auspiciante_incaa:hover               { background-position: -1551px -81px;  }
+.auspiciante_incaa                     { background-position: -1692px -81px;  }
+.auspiciante_lacripta:hover            { background-position: -1833px -81px;  }
+.auspiciante_lacripta                  { background-position: -1974px -81px;  }
+.auspiciante_leotripi:hover            { background-position: 0 -162px;  }
+.auspiciante_leotripi                  { background-position: -141px -162px;  }
+.auspiciante_metamorfosisfx:hover      { background-position: -282px -162px;  }
+.auspiciante_metamorfosisfx            { background-position: -423px -162px;  }
+.auspiciante_miradadistribution:hover  { background-position: -564px -162px;  }
+.auspiciante_miradadistribution        { background-position: -705px -162px;  }
+.auspiciante_monumental:hover          { background-position: -846px -162px;  }
+.auspiciante_monumental                { background-position: -987px -162px;  }
+.auspiciante_nacionalrock:hover        { background-position: -1128px -162px;  }
+.auspiciante_nacionalrock              { background-position: -1269px -162px;  }
+.auspiciante_piromaniafx:hover         { background-position: -1410px -162px;  }
+.auspiciante_piromaniafx               { background-position: -1551px -162px;  }
+.auspiciante_planetarycomics:hover     { background-position: -1692px -162px;  }
+.auspiciante_planetarycomics           { background-position: -1833px -162px;  }
+.auspiciante_quintadimension:hover     { background-position: -1974px -162px;  }
+.auspiciante_quintadimension           { background-position: 0 -243px;  }
+.auspiciante_rafma:hover               { background-position: -141px -243px;  }
+.auspiciante_rafma                     { background-position: -282px -243px;  }
+.auspiciante_rentalbsas:hover          { background-position: -423px -243px;  }
+.auspiciante_rentalbsas                { background-position: -564px -243px;  }
+.auspiciante_requiem:hover             { background-position: -705px -243px;  }
+.auspiciante_requiem                   { background-position: -846px -243px;  }
+.auspiciante_ticoral:hover             { background-position: -987px -243px;  }
+.auspiciante_ticoral                   { background-position: -1128px -243px;  }
+.auspiciante_toronja:hover             { background-position: -1269px -243px;  }
+.auspiciante_toronja                   { background-position: -1410px -243px;  }
+.auspiciante_uip:hover                 { background-position: -1551px -243px;  }
+.auspiciante_uip                       { background-position: -1692px -243px;  }
+.auspiciante_vacomoloco:hover          { background-position: -1833px -243px;  }
+.auspiciante_vacomoloco                { background-position: -1974px -243px;  }
+.auspiciante_vans:hover                { background-position: 0 -324px;  }
+.auspiciante_vans                      { background-position: -141px -324px;  }
+.auspiciante_videoflims:hover          { background-position: -282px -324px;  }
+.auspiciante_videoflims                { background-position: -423px -324px;  }
+.auspiciante_wancamp:hover             { background-position: -564px -324px;  }
+.auspiciante_wancamp                   { background-position: -705px -324px;  }
+.auspiciante_warnerbrosargentina:hover { background-position: -846px -324px;  }
+.auspiciante_warnerbrosargentina       { background-position: -987px -324px;  }
