Fixes and 2015 edition data

--- a/css/imports.css
+++ b/css/imports.css
@@ -10,3 +10,4 @@ Author URI:			mailto:author@bars.com
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 @import url(http://fonts.googleapis.com/css?family=Lora);
+@import url(http://fonts.googleapis.com/css?family=Lobster);
