--- a/css/main.css
+++ b/css/main.css
@@ -31,16 +31,8 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 
 /* Header menu */
 #header-menu { position: relative; background-color: black; text-align: center; }
-#header-menu .nav-menu ul { position: relative; left: 50%; margin: 0; padding: 0; }
-#header-menu .nav-menu ul li { display: table-cell !important; position: relative; right: 50%; vertical-align: middle; padding: 8px; }
-
-/* Call is open! 2014 */
-/*
-#header-menu .nav-menu li:nth-child(4) { position: relative; width: 140px; }
-#header-menu .nav-menu li:nth-child(4):hover { background: none; }
-#header-menu .nav-menu li:nth-child(4).current_page_item:hover { background: #ad0000; }
-#header-menu .nav-menu li:nth-child(4) a.call-is-open { padding: 0; display: block; position: absolute; left: 50%; margin-left: -70px; top: 50%; margin-top: -32px; z-index: 1; } /* image: 140x68 */
-
+#header-menu .nav-menu ul { display: table; margin: 0 auto; padding: 0; }
+#header-menu .nav-menu ul li { display: table-cell !important; position: relative; vertical-align: middle; padding: 8px; }
 
 /* Sticky menu fix */
 #header-menu { z-index: 99; width: 100%; }
@@ -106,7 +98,7 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 #page-juries .awards { background: rgba(25,25,25,0.5); border-radius: 5px; padding: 10px; }
 #page-juries .awards tr th, #page-juries .awards tr td { text-align: center; width: 50%; }
 #page-juries .jury { clear: both; margin: 0 30px 15px 50px; padding: 10px 10px 5px 10px; border-top: 1px solid gray; background: rgba(25,25,25,0.5); border-radius: 5px; }
-#page-juries .jury .jury-image { float: left; width: 150px; height: 150px; border-radius: 5px; margin: 0 10px 10px 0; }
+#page-juries .jury .jury-image { float: left; width: 150px; height: 150px; border-radius: 50%; margin: 0 10px 10px 0; }
 #page-juries .jury .jury-info { padding-right: 10px; line-height: 1.5; }
 #page-juries .jury .jury-info .jury-name { margin-bottom: 10px; font-size: 1.1em; font-weight: bold; }
 
@@ -262,3 +254,12 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 
 /* Signature */
 #signature { margin-right: 20px; float: right !important; text-transform: uppercase !important; }
+
+/* Call is open! 2015 */
+.call-is-open { font-family: 'Lobster'; text-transform: none; text-shadow: 2px 1px 1px #000; }
+/*.call-is-open a { font-size: 1.5em; }*/
+.call-is-open.current_page_item { font-size: inherit !important; }
+.call-is-open .call-is-open-label { font-size: 1.5em; position: absolute; }
+.call-is-open .call-is-open-label.call-is-open-link { font-size: 1.7em; left: 8px; top: 4px; padding: 0 !important; margin: 0 !important; }
+.call-is-open .call-is-open-label.call-is-open-label-pre  { left: 23px; top: -11px; }
+.call-is-open .call-is-open-label.call-is-open-label-post { right: 25px; bottom: -15px; }
