--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -1,72 +1,65 @@
-.sponsors { text-align: center; overflow: hidden; width: 100%; margin: 0 auto; }
-.auspiciante { margin: 20px 35px 0 35px; width:140px; height:80px; display:inline-block; overflow:hidden; background-repeat: no-repeat; background:url("images/auspiciantes.png");}
+.sponsors {
+  text-align: center; overflow: hidden; width: 100%; margin: 0 auto;
+}
+
+.auspiciante {
+  margin: 20px 35px 0 35px;
+  width: 140px;
+  height: 80px;
+  display: inline-block;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background: url("images/auspiciantes.png");
+}
 .auspiciante a { display: block; height: 100%; width: 100%; }
 
-.auspiciante_ab:hover                  { background-position: 0 0;  }
-.auspiciante_ab                        { background-position: -141px 0;  }
-.auspiciante_bsasciudad:hover          { background-position: -282px 0;  }
-.auspiciante_bsasciudad                { background-position: -423px 0;  }
-.auspiciante_cdi:hover                 { background-position: -564px 0;  }
-.auspiciante_cdi                       { background-position: -705px 0;  }
-.auspiciante_cinefania:hover           { background-position: -846px 0;  }
-.auspiciante_cinefania                 { background-position: -987px 0;  }
-.auspiciante_cinesargentinos:hover     { background-position: -1128px 0;  }
-.auspiciante_cinesargentinos           { background-position: -1269px 0;  }
-.auspiciante_cunnington:hover          { background-position: -1410px 0;  }
-.auspiciante_cunnington                { background-position: -1551px 0;  }
-.auspiciante_eda:hover                 { background-position: -1692px 0;  }
-.auspiciante_eda                       { background-position: -1833px 0;  }
-.auspiciante_fantafestivales:hover     { background-position: -1974px 0;  }
-.auspiciante_fantafestivales           { background-position: 0 -81px;  }
-.auspiciante_festeringslime:hover      { background-position: -141px -81px;  }
-.auspiciante_festeringslime            { background-position: -282px -81px;  }
-.auspiciante_findlingfilms:hover       { background-position: -423px -81px;  }
-.auspiciante_findlingfilms             { background-position: -564px -81px;  }
-.auspiciante_flaviogrecopaglia:hover   { background-position: -705px -81px;  }
-.auspiciante_flaviogrecopaglia         { background-position: -846px -81px;  }
-.auspiciante_grolsch:hover             { background-position: -987px -81px;  }
-.auspiciante_grolsch                   { background-position: -1128px -81px;  }
-.auspiciante_illusiondreamsfx:hover    { background-position: -1269px -81px;  }
-.auspiciante_illusiondreamsfx          { background-position: -1410px -81px;  }
-.auspiciante_incaa:hover               { background-position: -1551px -81px;  }
-.auspiciante_incaa                     { background-position: -1692px -81px;  }
-.auspiciante_lacripta:hover            { background-position: -1833px -81px;  }
-.auspiciante_lacripta                  { background-position: -1974px -81px;  }
-.auspiciante_leotripi:hover            { background-position: 0 -162px;  }
-.auspiciante_leotripi                  { background-position: -141px -162px;  }
-.auspiciante_metamorfosisfx:hover      { background-position: -282px -162px;  }
-.auspiciante_metamorfosisfx            { background-position: -423px -162px;  }
-.auspiciante_miradadistribution:hover  { background-position: -564px -162px;  }
-.auspiciante_miradadistribution        { background-position: -705px -162px;  }
-.auspiciante_monumental:hover          { background-position: -846px -162px;  }
-.auspiciante_monumental                { background-position: -987px -162px;  }
-.auspiciante_nacionalrock:hover        { background-position: -1128px -162px;  }
-.auspiciante_nacionalrock              { background-position: -1269px -162px;  }
-.auspiciante_piromaniafx:hover         { background-position: -1410px -162px;  }
-.auspiciante_piromaniafx               { background-position: -1551px -162px;  }
-.auspiciante_planetarycomics:hover     { background-position: -1692px -162px;  }
-.auspiciante_planetarycomics           { background-position: -1833px -162px;  }
-.auspiciante_quintadimension:hover     { background-position: -1974px -162px;  }
-.auspiciante_quintadimension           { background-position: 0 -243px;  }
-.auspiciante_rafma:hover               { background-position: -141px -243px;  }
-.auspiciante_rafma                     { background-position: -282px -243px;  }
-.auspiciante_rentalbsas:hover          { background-position: -423px -243px;  }
-.auspiciante_rentalbsas                { background-position: -564px -243px;  }
-.auspiciante_requiem:hover             { background-position: -705px -243px;  }
-.auspiciante_requiem                   { background-position: -846px -243px;  }
-.auspiciante_ticoral:hover             { background-position: -987px -243px;  }
-.auspiciante_ticoral                   { background-position: -1128px -243px;  }
-.auspiciante_toronja:hover             { background-position: -1269px -243px;  }
-.auspiciante_toronja                   { background-position: -1410px -243px;  }
-.auspiciante_uip:hover                 { background-position: -1551px -243px;  }
-.auspiciante_uip                       { background-position: -1692px -243px;  }
-.auspiciante_vacomoloco:hover          { background-position: -1833px -243px;  }
-.auspiciante_vacomoloco                { background-position: -1974px -243px;  }
-.auspiciante_vans:hover                { background-position: 0 -324px;  }
-.auspiciante_vans                      { background-position: -141px -324px;  }
-.auspiciante_videoflims:hover          { background-position: -282px -324px;  }
-.auspiciante_videoflims                { background-position: -423px -324px;  }
-.auspiciante_wancamp:hover             { background-position: -564px -324px;  }
-.auspiciante_wancamp                   { background-position: -705px -324px;  }
-.auspiciante_warnerbrosargentina:hover { background-position: -846px -324px;  }
-.auspiciante_warnerbrosargentina       { background-position: -987px -324px;  }
+.auspiciante_ab:hover { background-position: -1px -1px; }
+.auspiciante_ab { background-position: -143px -1px; }
+.auspiciante_bsasciudad:hover { background-position: -285px -1px; }
+.auspiciante_bsasciudad { background-position: -427px -1px; }
+.auspiciante_cinefania:hover { background-position: -569px -1px; }
+.auspiciante_cinefania { background-position: -1px -83px; }
+.auspiciante_cunnington:hover { background-position: -143px -83px; }
+.auspiciante_cunnington { background-position: -285px -83px; }
+.auspiciante_eda:hover { background-position: -427px -83px; }
+.auspiciante_eda { background-position: -569px -83px; }
+.auspiciante_fantafestivales:hover { background-position: -1px -165px; }
+.auspiciante_fantafestivales { background-position: -143px -165px; }
+.auspiciante_festeringslime:hover { background-position: -285px -165px; }
+.auspiciante_festeringslime { background-position: -427px -165px; }
+.auspiciante_findlingfilms:hover { background-position: -569px -165px; }
+.auspiciante_findlingfilms { background-position: -1px -247px; }
+.auspiciante_flaviogrecopaglia:hover { background-position: -143px -247px; }
+.auspiciante_flaviogrecopaglia { background-position: -285px -247px; }
+.auspiciante_illusiondreamsfx:hover { background-position: -427px -247px; }
+.auspiciante_illusiondreamsfx { background-position: -569px -247px; }
+.auspiciante_incaa:hover { background-position: -1px -329px; }
+.auspiciante_incaa { background-position: -143px -329px; }
+.auspiciante_lacripta:hover { background-position: -285px -329px; }
+.auspiciante_lacripta { background-position: -427px -329px; }
+.auspiciante_metamorfosisfx:hover { background-position: -569px -329px; }
+.auspiciante_metamorfosisfx { background-position: -1px -411px; }
+.auspiciante_monumental:hover { background-position: -143px -411px; }
+.auspiciante_monumental { background-position: -285px -411px; }
+.auspiciante_nacionalrock:hover { background-position: -427px -411px; }
+.auspiciante_nacionalrock { background-position: -569px -411px; }
+.auspiciante_piromaniafx:hover { background-position: -1px -493px; }
+.auspiciante_piromaniafx { background-position: -143px -493px; }
+.auspiciante_quintadimension:hover { background-position: -285px -493px; }
+.auspiciante_quintadimension { background-position: -427px -493px; }
+.auspiciante_rafma:hover { background-position: -569px -493px; }
+.auspiciante_rafma { background-position: -1px -575px; }
+.auspiciante_rentalbsas:hover { background-position: -285px -575px; }
+.auspiciante_rentalbsas { background-position: -427px -575px; }
+.auspiciante_requiem:hover { background-position: -1px -657px; }
+.auspiciante_requiem { background-position: -143px -657px; }
+.auspiciante_ticoral:hover { background-position: -285px -657px; }
+.auspiciante_ticoral { background-position: -427px -657px; }
+.auspiciante_toronja:hover { background-position: -711px -1px; }
+.auspiciante_toronja { background-position: -711px -83px; }
+.auspiciante_vacomoloco:hover { background-position: -711px -247px; }
+.auspiciante_vacomoloco { background-position: -711px -329px; }
+.auspiciante_videoflims:hover { background-position: -711px -411px; }
+.auspiciante_videoflims { background-position: -711px -493px; }
+.auspiciante_wancamp:hover { background-position: -711px -575px; }
+.auspiciante_wancamp { background-position: -711px -657px; }
