--- a/css/text.css
+++ b/css/text.css
@@ -125,6 +125,9 @@
 /* Contact (contact.php) */
 #page-contact .contact-form-input-hint { font-size: 8pt; font-style: italic; }
 
+/* Press (press.php) */
+#page-press .press-form-input-hint { font-size: 8pt; font-style: italic; }
+
 /* Genericon pseudo-elements */
 .posts .post .post-comment-count a:before  { content: '\f108'; margin-right: 5px; font-size: 16px; font-family: 'Genericons'; vertical-align: bottom; }
 #page-single .post-header .post-category a:before { content: '\f301'; font-family: 'Genericons'; }
