--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -13,53 +13,64 @@
 }
 .auspiciante a { display: block; height: 100%; width: 100%; }
 
+.sprite {
+    background-image: url(spritesheet.png);
+    background-repeat: no-repeat;
+    display: block;
+}
+
 .auspiciante_ab:hover { background-position: -1px -1px; }
 .auspiciante_ab { background-position: -143px -1px; }
 .auspiciante_bsasciudad:hover { background-position: -285px -1px; }
 .auspiciante_bsasciudad { background-position: -427px -1px; }
 .auspiciante_cinefania:hover { background-position: -569px -1px; }
 .auspiciante_cinefania { background-position: -1px -83px; }
-.auspiciante_cunnington:hover { background-position: -143px -83px; }
-.auspiciante_cunnington { background-position: -285px -83px; }
-.auspiciante_eda:hover { background-position: -427px -83px; }
-.auspiciante_eda { background-position: -569px -83px; }
-.auspiciante_fantafestivales:hover { background-position: -1px -165px; }
-.auspiciante_fantafestivales { background-position: -143px -165px; }
-.auspiciante_festeringslime:hover { background-position: -285px -165px; }
-.auspiciante_festeringslime { background-position: -427px -165px; }
-.auspiciante_findlingfilms:hover { background-position: -569px -165px; }
-.auspiciante_findlingfilms { background-position: -1px -247px; }
-.auspiciante_flaviogrecopaglia:hover { background-position: -143px -247px; }
-.auspiciante_flaviogrecopaglia { background-position: -285px -247px; }
-.auspiciante_illusiondreamsfx:hover { background-position: -427px -247px; }
-.auspiciante_illusiondreamsfx { background-position: -569px -247px; }
-.auspiciante_incaa:hover { background-position: -1px -329px; }
-.auspiciante_incaa { background-position: -143px -329px; }
-.auspiciante_lacripta:hover { background-position: -285px -329px; }
-.auspiciante_lacripta { background-position: -427px -329px; }
-.auspiciante_metamorfosisfx:hover { background-position: -569px -329px; }
-.auspiciante_metamorfosisfx { background-position: -1px -411px; }
-.auspiciante_monumental:hover { background-position: -143px -411px; }
-.auspiciante_monumental { background-position: -285px -411px; }
-.auspiciante_nacionalrock:hover { background-position: -427px -411px; }
-.auspiciante_nacionalrock { background-position: -569px -411px; }
-.auspiciante_piromaniafx:hover { background-position: -1px -493px; }
-.auspiciante_piromaniafx { background-position: -143px -493px; }
-.auspiciante_quintadimension:hover { background-position: -285px -493px; }
-.auspiciante_quintadimension { background-position: -427px -493px; }
-.auspiciante_rafma:hover { background-position: -569px -493px; }
-.auspiciante_rafma { background-position: -1px -575px; }
-.auspiciante_rentalbsas:hover { background-position: -143px -575px; }
-.auspiciante_rentalbsas { background-position: -285px -575px; }
-.auspiciante_requiem:hover { background-position: -427px -575px; }
-.auspiciante_requiem { background-position: -569px -575px; }
-.auspiciante_ticoral:hover { background-position: -1px -657px; }
-.auspiciante_ticoral { background-position: -143px -657px; }
-.auspiciante_toronja:hover { background-position: -285px -657px; }
-.auspiciante_toronja { background-position: -427px -657px; }
-.auspiciante_vacomoloco:hover { background-position: -569px -657px; }
-.auspiciante_vacomoloco { background-position: -711px -1px; }
-.auspiciante_videoflims:hover { background-position: -711px -83px; }
-.auspiciante_videoflims { background-position: -711px -165px; }
-.auspiciante_wancamp:hover { background-position: -711px -247px; }
-.auspiciante_wancamp { background-position: -711px -329px; }
+.auspiciante_circodelhorror:hover { background-position: -143px -83px; }
+.auspiciante_circodelhorror { background-position: -285px -83px; }
+.auspiciante_cunnington:hover { background-position: -427px -83px; }
+.auspiciante_cunnington { background-position: -569px -83px; }
+.auspiciante_eda:hover { background-position: -1px -165px; }
+.auspiciante_eda { background-position: -143px -165px; }
+.auspiciante_fantafestivales:hover { background-position: -285px -165px; }
+.auspiciante_fantafestivales { background-position: -427px -165px; }
+.auspiciante_festeringslime:hover { background-position: -569px -165px; }
+.auspiciante_festeringslime { background-position: -1px -247px; }
+.auspiciante_filmsharks:hover { background-position: -143px -247px; }
+.auspiciante_filmsharks { background-position: -285px -247px; }
+.auspiciante_findlingfilms:hover { background-position: -427px -247px; }
+.auspiciante_findlingfilms { background-position: -569px -247px; }
+.auspiciante_flaviogrecopaglia:hover { background-position: -1px -329px; }
+.auspiciante_flaviogrecopaglia { background-position: -143px -329px; }
+.auspiciante_illusiondreamsfx:hover { background-position: -285px -329px; }
+.auspiciante_illusiondreamsfx { background-position: -427px -329px; }
+.auspiciante_incaa:hover { background-position: -569px -329px; }
+.auspiciante_incaa { background-position: -1px -411px; }
+.auspiciante_lacripta:hover { background-position: -143px -411px; }
+.auspiciante_lacripta { background-position: -285px -411px; }
+.auspiciante_leonardofavio { background-position: -427px -411px; }
+.auspiciante_metamorfosisfx:hover { background-position: -569px -411px; }
+.auspiciante_metamorfosisfx { background-position: -1px -493px; }
+.auspiciante_monumental:hover { background-position: -143px -493px; }
+.auspiciante_monumental { background-position: -285px -493px; }
+.auspiciante_nacionalrock:hover { background-position: -427px -493px; }
+.auspiciante_nacionalrock { background-position: -569px -493px; }
+.auspiciante_piromaniafx:hover { background-position: -1px -575px; }
+.auspiciante_piromaniafx { background-position: -143px -575px; }
+.auspiciante_quintadimension:hover { background-position: -285px -575px; }
+.auspiciante_quintadimension { background-position: -427px -575px; }
+.auspiciante_rafma:hover { background-position: -569px -575px; }
+.auspiciante_rafma { background-position: -1px -657px; }
+.auspiciante_rentalbsas:hover { background-position: -143px -657px; }
+.auspiciante_rentalbsas { background-position: -285px -657px; }
+.auspiciante_requiem:hover { background-position: -427px -657px; }
+.auspiciante_requiem { background-position: -569px -657px; }
+.auspiciante_ticoral:hover { background-position: -711px -1px; }
+.auspiciante_ticoral { background-position: -711px -83px; }
+.auspiciante_toronja:hover { background-position: -711px -165px; }
+.auspiciante_toronja { background-position: -711px -247px; }
+.auspiciante_vacomoloco:hover { background-position: -711px -329px; }
+.auspiciante_vacomoloco { background-position: -711px -411px; }
+.auspiciante_videoflims:hover { background-position: -711px -493px; }
+.auspiciante_videoflims { background-position: -711px -575px; }
+.auspiciante_wancamp:hover { background-position: -711px -657px; }
+.auspiciante_wancamp { background-position: -1px -739px; }
